[package]
name = "try-catch"
version = "0.2.1"
license = "Apache-2.0"
edition = "2018"
repository = "https://github.com/tvallotton/rust-try-catch"
license-file = "LICENSE"
description = "A simple proc-macro that enables try-catch for Rust with automatic downcasting of error types."
keywords = ["error","ergonomic", "try"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
proc-macro2 = { git = "https://github.com/yoavk/proc-macro2", branch = "force_semver_exempt" }
quote = "= 1.0.8"
syn = { version = "= 1.0.57", features = ["full"] }

[dev-dependencies]
serde_json = "= 1.0.61"
